Change logo sizing and fixed navbar wrapping

--- a/client/src/components/Nav/Navbar.module.css
+++ b/client/src/components/Nav/Navbar.module.css
@@ -43,3 +43,17 @@
   outline: none;
   box-shadow: none;
 }
+
+@media only screen and (min-width: 992px) and (max-width: 1200px) {
+  .navbar_button {
+    font-size: 14px;
+    letter-spacing: 2px;
+  }
+}
+
+@media only screen and (min-width: 1200px) and (max-width: 1500px) {
+  .navbar_button {
+    font-size: 17px;
+    letter-spacing: 5px;
+  }
+}
