--- a/client/src/components/Projects/Project.module.css
+++ b/client/src/components/Projects/Project.module.css
@@ -26,7 +26,6 @@
 .card_img {
   width: 300px;
   height: 300px;
-  box-shadow: 10px 10px 10px darkgrey;
 }
 
 .title_red {
@@ -49,10 +48,4 @@
   .project_row {
     margin: 50px 0px 50px 0px;
   }
-}
-
-@media only screen and (min-width: 992px) and (max-width: 1200px) {
-}
-
-@media only screen and (min-width: 1200px) and (max-width: 1500px) {
 }
